--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     function actualizarSelectorCategorias() {
       const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
       selectorCategoria.innerHTML = categorias.map(cat => 
-        `<option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>`).join('');
+        <option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>).join('');
     }
 
     function agregarAlCarrito(index) {
@@ -298,7 +298,7 @@
       listaCarrito.innerHTML = '';
       let total = 0;
       carrito.forEach(p => {
-        listaCarrito.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
+        listaCarrito.innerHTML += <li>${p.nombre} - $${p.precio}</li>;
         total += parseFloat(p.precio);
       });
       document.getElementById("total").textContent = total.toFixed(2);
