--- a/index.html
+++ b/index.html
@@ -243,20 +243,13 @@
       this.reset();
     });
 
-    // FUNCIÓN MEJORADA PARA ENLACES DE GOOGLE DRIVE
+    // Utility function to convert Google Drive URLs to direct access URLs
     function convertGoogleDriveUrl(url) {
-      let fileId = null;
-      const match1 = url.match(/\/file\/d\/([^\/]+)\//);
-      const match2 = url.match(/[?&]id=([^&]+)/);
-      const match3 = url.match(/\/uc\?id=([^&]+)/);
-
-      if (url.includes('/folders/')) return '';
-
-      if (match1) fileId = match1[1];
-      else if (match2) fileId = match2[1];
-      else if (match3) fileId = match3[1];
-
-      return fileId ? https://drive.google.com/uc?export=view&id=${fileId} : url;
+      const match = url.match(/\/d\/(.*?)\//);
+      if (match && match[1]) {
+        return https://drive.google.com/uc?id=${match[1]};
+      }
+      return url; // Return the original URL if it doesn't match the expected pattern
     }
 
     function actualizarVista() {
