--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required class="input-edit">
         <input type="number" id="precioProducto" placeholder="Precio" required class="input-edit">
         <input type="text" id="categoriaProducto" placeholder="Categoría" required class="input-edit">
-        <input type="text" id="urlImagenProducto" placeholder="URL de la imagen" required class="input-edit">
+        <input type="file" id="imagenProducto" accept="image/*" required class="input-edit">
         <button type="submit" class="admin-button">Agregar Desayuno</button>
       </form>
       <hr>
@@ -229,28 +229,23 @@
       const nombre = document.getElementById("nombreProducto").value;
       const precio = document.getElementById("precioProducto").value;
       const categoria = document.getElementById("categoriaProducto").value;
-      const urlImagen = document.getElementById("urlImagenProducto").value;
+      const imagen = document.getElementById("imagenProducto").files[0];
 
-      if (urlImagen) {
-        const nuevoProducto = {
-          nombre, precio, categoria, imagen: urlImagen
+      if (imagen) {
+        const reader = new FileReader();
+        reader.onloadend = function () {
+          const nuevoProducto = {
+            nombre, precio, categoria, imagen: reader.result
+          };
+          productos.push(nuevoProducto);
+          localStorage.setItem("productos", JSON.stringify(productos));
+          actualizarVista();
         };
-        productos.push(nuevoProducto);
-        localStorage.setItem("productos", JSON.stringify(productos));
-        actualizarVista();
+        reader.readAsDataURL(imagen);
       }
 
       this.reset();
     });
-
-    // Utility function to convert Google Drive URLs to direct access URLs
-    function convertGoogleDriveUrl(url) {
-      const match = url.match(/\/d\/(.*?)\//);
-      if (match && match[1]) {
-        return https://drive.google.com/uc?id=${match[1]};
-      }
-      return url; // Return the original URL if it doesn't match the expected pattern
-    }
 
     function actualizarVista() {
       productosContainer.innerHTML = '';
@@ -262,10 +257,9 @@
         : productos.filter(p => p.categoria === categoriaSeleccionada);
 
       productosFiltrados.forEach((producto, index) => {
-        const imageUrl = convertGoogleDriveUrl(producto.imagen);
         const tarjeta = `
           <div class="producto-tarjeta">
-            <img src="${imageUrl}" class="producto-imagen">
+            <img src="${producto.imagen}" class="producto-imagen">
             <div class="producto-nombre">${producto.nombre}</div>
             <div class="producto-precio">$${producto.precio}</div>
             <div class="producto-categoria">${producto.categoria}</div>
@@ -275,14 +269,13 @@
       });
 
       productos.forEach((producto, index) => {
-        const imageUrl = convertGoogleDriveUrl(producto.imagen);
         productosAgregados.innerHTML += `
           <div class="producto-tarjeta">
-            <img src="${imageUrl}" class="producto-imagen">
+            <img src="${producto.imagen}" class="producto-imagen">
             <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
             <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
             <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
-            <input class="input-edit" type="text" value="${producto.imagen}" onchange="editarProducto(${index}, 'imagen', this.value)">
+            <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
             <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
           </div>`;
       });
@@ -321,6 +314,19 @@
       productos[index][campo] = valor;
       localStorage.setItem("productos", JSON.stringify(productos));
       actualizarVista();
+    }
+
+    function editarImagen(index, input) {
+      const file = input.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onloadend = () => {
+          productos[index].imagen = reader.result;
+          localStorage.setItem("productos", JSON.stringify(productos));
+          actualizarVista();
+        };
+        reader.readAsDataURL(file);
+      }
     }
 
     function comprar() {
