--- a/index.html
+++ b/index.html
@@ -1,375 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sorpresas in Style</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f9;
-    }
-
-    header {
-      background-color: #66e0d4;
-      padding: 1em;
-      text-align: center;
-      color: white;
-    }
-
-    #company-logo {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    #filtro-categoria {
-      margin: 20px auto 0;
-      display: flex;
-      justify-content: center;
-    }
-
-    #productos-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 12px;
-      padding: 20px;
-      justify-items: center;
-    }
-
-    .producto-tarjeta {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 12px;
-      width: 150px;
-      text-align: center;
-      background-color: white;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    .producto-imagen {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-
-    .producto-nombre {
-      font-size: 14px;
-      margin: 6px 0;
-      color: #333;
-    }
-
-    .producto-precio {
-      font-size: 13px;
-      color: #666;
-    }
-
-    .producto-categoria {
-      font-size: 12px;
-      color: #999;
-    }
-
-    .producto-boton {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background-color: #007acc;
-      border: none;
-      border-radius: 50%;
-      color: white;
-      width: 30px;
-      height: 30px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #carrito {
-      padding: 20px;
-      background-color: #fff;
-      border-top: 1px solid #ddd;
-    }
-
-    #botonAdmin {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      font-size: 24px;
-      background: #007acc;
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-      padding-top: 60px;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-      position: relative;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      cursor: pointer;
-    }
-
-    .admin-button {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #66e0d4;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .input-edit {
-      width: 100%;
-      margin: 5px 0;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <img id="company-logo" src="" alt="Logo de la empresa">
-    <h1>Sorpresas in Style</h1>
-  </header>
-
-  <div id="filtro-categoria">
-    <select id="selector-categoria" onchange="filtrarCategoria()">
-      <option value="todas">Todas las categorías</option>
-    </select>
-  </div>
-
-  <main>
-    <section id="productos-container"></section>
-    <section id="carrito">
-      <h2>Carrito de Compras</h2>
-      <ul id="lista-carrito"></ul>
-      <p>Total: $<span id="total">0</span></p>
-      <button onclick="comprar()">Comprar</button>
-    </section>
-  </main>
-
-  <!-- Modal -->
-  <div id="adminModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Panel de Administración</h2>
-      <form id="formulario-producto">
-        <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required class="input-edit">
-        <input type="number" id="precioProducto" placeholder="Precio" required class="input-edit">
-        <input type="text" id="categoriaProducto" placeholder="Categoría" required class="input-edit">
-        <input type="text" id="urlImagenProducto" placeholder="URL de la imagen" required class="input-edit">
-        <button type="submit" class="admin-button">Agregar Desayuno</button>
-      </form>
-      <hr>
-      <h3>Desayunos Agregados</h3>
-      <div id="productos-agregados"></div>
-      <hr>
-      <h3>Cambiar Logo</h3>
-      <input type="file" id="logoInput" accept="image/*" class="input-edit"/>
-      <button onclick="cambiarLogo()" class="admin-button">Cambiar Logo</button>
-    </div>
-  </div>
-
-  <button id="botonAdmin">⚙️</button>
-
-  <script>
-    const modal = document.getElementById("adminModal");
-    const botonAdmin = document.getElementById("botonAdmin");
-    const span = document.getElementsByClassName("close")[0];
-    const productosContainer = document.getElementById("productos-container");
-    const productosAgregados = document.getElementById("productos-agregados");
-    const selectorCategoria = document.getElementById("selector-categoria");
-
-    let productos = JSON.parse(localStorage.getItem("productos")) || [];
-    let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
-    let categoriaSeleccionada = "todas";
-
-    botonAdmin.onclick = () => modal.style.display = "block";
-    span.onclick = () => modal.style.display = "none";
-    window.onclick = e => { if (e.target === modal) modal.style.display = "none"; };
-
-    document.getElementById("formulario-producto").addEventListener("submit", function (event) {
-      event.preventDefault();
-      const nombre = document.getElementById("nombreProducto").value;
-      const precio = document.getElementById("precioProducto").value;
-      const categoria = document.getElementById("categoriaProducto").value;
-      const urlImagen = document.getElementById("urlImagenProducto").value;
-
-      if (urlImagen) {
-        const nuevoProducto = {
-          nombre, precio, categoria, imagen: urlImagen
-        };
-        productos.push(nuevoProducto);
-        localStorage.setItem("productos", JSON.stringify(productos));
-        actualizarVista();
-      }
-
-      this.reset();
-    });
-
-    // FUNCIÓN MEJORADA PARA ENLACES DE GOOGLE DRIVE
-    function convertGoogleDriveUrl(url) {
-      let fileId = null;
-      const match1 = url.match(/\/file\/d\/([^\/]+)\//);
-      const match2 = url.match(/[?&]id=([^&]+)/);
-      const match3 = url.match(/\/uc\?id=([^&]+)/);
-
-      if (url.includes('/folders/')) return '';
-
-      if (match1) fileId = match1[1];
-      else if (match2) fileId = match2[1];
-      else if (match3) fileId = match3[1];
-
-      return fileId ? https://drive.google.com/uc?export=view&id=${fileId} : url;
-    }
-
-    function actualizarVista() {
-      productosContainer.innerHTML = '';
-      productosAgregados.innerHTML = '';
-      actualizarSelectorCategorias();
-
-      const productosFiltrados = categoriaSeleccionada === "todas"
-        ? productos
-        : productos.filter(p => p.categoria === categoriaSeleccionada);
-
-      productosFiltrados.forEach((producto, index) => {
-        const imageUrl = convertGoogleDriveUrl(producto.imagen);
-        const tarjeta = `
-          <div class="producto-tarjeta">
-            <img src="${imageUrl}" class="producto-imagen">
-            <div class="producto-nombre">${producto.nombre}</div>
-            <div class="producto-precio">$${producto.precio}</div>
-            <div class="producto-categoria">${producto.categoria}</div>
-            <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
-          </div>`;
-        productosContainer.innerHTML += tarjeta;
-      });
-
-      productos.forEach((producto, index) => {
-        const imageUrl = convertGoogleDriveUrl(producto.imagen);
-        productosAgregados.innerHTML += `
-          <div class="producto-tarjeta">
-            <img src="${imageUrl}" class="producto-imagen">
-            <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
-            <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
-            <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
-            <input class="input-edit" type="text" value="${producto.imagen}" onchange="editarProducto(${index}, 'imagen', this.value)">
-            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
-          </div>`;
-      });
-    }
-
-    function actualizarSelectorCategorias() {
-      const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
-      selectorCategoria.innerHTML = categorias.map(cat => 
-        <option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>).join('');
-    }
-
-    function agregarAlCarrito(index) {
-      carrito.push(productos[index]);
-      localStorage.setItem("carrito", JSON.stringify(carrito));
-      actualizarCarrito();
-    }
-
-    function actualizarCarrito() {
-      const listaCarrito = document.getElementById("lista-carrito");
-      listaCarrito.innerHTML = '';
-      let total = 0;
-      carrito.forEach(p => {
-        listaCarrito.innerHTML += <li>${p.nombre} - $${p.precio}</li>;
-        total += parseFloat(p.precio);
-      });
-      document.getElementById("total").textContent = total.toFixed(2);
-    }
-
-    function eliminarProducto(index) {
-      productos.splice(index, 1);
-      localStorage.setItem("productos", JSON.stringify(productos));
-      actualizarVista();
-    }
-
-    function editarProducto(index, campo, valor) {
-      productos[index][campo] = valor;
-      localStorage.setItem("productos", JSON.stringify(productos));
-      actualizarVista();
-    }
-
-    function comprar() {
-      if (carrito.length) {
-        alert("¡Gracias por tu compra!");
-        carrito = [];
-        localStorage.setItem("carrito", JSON.stringify(carrito));
-        actualizarCarrito();
-      } else {
-        alert("Tu carrito está vacío.");
-      }
-    }
-
-    function filtrarCategoria() {
-      categoriaSeleccionada = selectorCategoria.value;
-      actualizarVista();
-    }
-
-    function cambiarLogo() {
-      const input = document.getElementById("logoInput").files[0];
-      if (input) {
-        const reader = new FileReader();
-        reader.onloadend = function () {
-          document.getElementById("company-logo").src = reader.result;
-          localStorage.setItem("logoEmpresa", reader.result);
-        };
-        reader.readAsDataURL(input);
-      }
-    }
-
-    function cargarLogoGuardado() {
-      const logo = localStorage.getItem("logoEmpresa");
-      if (logo) document.getElementById("company-logo").src = logo;
-    }
-
-    actualizarVista();
-    actualizarCarrito();
-    cargarLogoGuardado();
-  </script>
-</body>
-</html>
-[10:18 a.m., 16/4/2025] chris: <!DOCTYPE html><html lang="es">
+<!DOCTYPE html><html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -521,7 +150,7 @@ select {
 
     function actualizarFiltros() {
       const categorias = [...new Set(productos.map(p => p.categoria))];
-      filtroCategoria.innerHTML = '<option value="">Todas las categorías</option>' + categorias.map(cat => <option value="${cat}">${cat}</option>).join('');
+      filtroCategoria.innerHTML = '<option value="">Todas las categorías</option>' + categorias.map(cat => `<option value="${cat}">${cat}</option>`).join('');
     }
 
     function aplicarFiltros() {
@@ -568,7 +197,7 @@ select {
       let total = 0;
       carrito.forEach(producto => {
         const li = document.createElement("li");
-        li.textContent = ${producto.nombre} - $${producto.precio};
+        li.textContent = `${producto.nombre} - $${producto.precio}`;
         listaCarrito.appendChild(li);
         total += parseFloat(producto.precio);
       });
