--- a/index.html
+++ b/index.html
@@ -5,167 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f9;
-    }
-
-    header {
-      background-color: #66e0d4;
-      padding: 1em;
-      text-align: center;
-      color: white;
-    }
-
-    #company-logo {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    #filtro-categoria {
-      margin: 20px auto 0;
-      display: flex;
-      justify-content: center;
-    }
-
-    #productos-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 12px;
-      padding: 20px;
-      justify-items: center;
-    }
-
-    .producto-tarjeta {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 12px;
-      width: 150px;
-      text-align: center;
-      background-color: white;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    .producto-imagen {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-
-    .producto-nombre {
-      font-size: 14px;
-      margin: 6px 0;
-      color: #333;
-    }
-
-    .producto-precio {
-      font-size: 13px;
-      color: #666;
-    }
-
-    .producto-categoria {
-      font-size: 12px;
-      color: #999;
-    }
-
-    .producto-boton {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background-color: #007acc;
-      border: none;
-      border-radius: 50%;
-      color: white;
-      width: 30px;
-      height: 30px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #carrito {
-      padding: 20px;
-      background-color: #fff;
-      border-top: 1px solid #ddd;
-    }
-
-    #botonAdmin {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      font-size: 24px;
-      background: #007acc;
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-      padding-top: 60px;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-      position: relative;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      cursor: pointer;
-    }
-
-    .admin-button {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #66e0d4;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .input-edit {
-      width: 100%;
-      margin: 5px 0;
-    }
-
-    @media screen and (min-width: 600px) {
-      #productos-container {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      }
-    }
+    /* ... (Aquí iría todo tu código CSS existente sin cambios) ... */
   </style>
 </head>
 <body>
@@ -215,11 +55,9 @@
   <button id="botonAdmin">⚙️</button>
 
   <script type="module">
-    // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
-    import { getDatabase, ref, set, onValue, push } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
+    import { getDatabase, ref, set, onValue, push, update, remove } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
 
-    // Your web app's Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCpHYnWuWp7sb9P-HR6rEMg7fg9Xigl-lA",
       authDomain: "sorpresasinstyle-2664b.firebaseapp.com",
@@ -231,7 +69,6 @@
       measurementId: "G-022Q2CW6W0"
     };
 
-    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
 
@@ -242,7 +79,7 @@
     const productosAgregados = document.getElementById("productos-agregados");
     const selectorCategoria = document.getElementById("selector-categoria");
 
-    let productos = [];
+    let productos = {};
     let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
     let categoriaSeleccionada = "todas";
 
@@ -263,7 +100,8 @@
           const nuevoProducto = {
             nombre, precio, categoria, imagen: reader.result
           };
-          guardarProductoEnFirebase(nuevoProducto);
+          const newProductRef = push(ref(database, 'productos'));
+          set(newProductRef, nuevoProducto);
         };
         reader.readAsDataURL(imagen);
       }
@@ -271,18 +109,10 @@
       this.reset();
     });
 
-    function guardarProductoEnFirebase(producto) {
-      const newProductRef = push(ref(database, 'productos'));
-      set(newProductRef, producto);
-    }
-
     function cargarProductosDesdeFirebase() {
       const productosRef = ref(database, 'productos');
       onValue(productosRef, (snapshot) => {
-        productos = [];
-        snapshot.forEach((childSnapshot) => {
-          productos.push(childSnapshot.val());
-        });
+        productos = snapshot.val() || {};
         actualizarVista();
       });
     }
@@ -292,117 +122,15 @@
       productosAgregados.innerHTML = '';
       actualizarSelectorCategorias();
 
-      const productosFiltrados = categoriaSeleccionada === "todas"
-        ? productos
-        : productos.filter(p => p.categoria === categoriaSeleccionada);
+      const productosFiltrados = Object.entries(productos).filter(([key, p]) =>
+        categoriaSeleccionada === "todas" || p.categoria === categoriaSeleccionada
+      );
 
-      productosFiltrados.forEach((producto, index) => {
+      productosFiltrados.forEach(([key, producto]) => {
         const tarjeta = `
           <div class="producto-tarjeta">
             <img src="${producto.imagen}" class="producto-imagen">
             <div class="producto-nombre">${producto.nombre}</div>
             <div class="producto-precio">$${producto.precio}</div>
             <div class="producto-categoria">${producto.categoria}</div>
-            <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
-          </div>`;
-        productosContainer.innerHTML += tarjeta;
-      });
-
-      productos.forEach((producto, index) => {
-        productosAgregados.innerHTML += `
-          <div class="producto-tarjeta">
-            <img src="${producto.imagen}" class="producto-imagen">
-            <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
-            <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
-            <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
-            <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
-            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
-          </div>`;
-      });
-    }
-
-    function actualizarSelectorCategorias() {
-      const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
-      selectorCategoria.innerHTML = categorias.map(cat => 
-        `<option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>`).join('');
-    }
-
-    function agregarAlCarrito(index) {
-      carrito.push(productos[index]);
-      localStorage.setItem("carrito", JSON.stringify(carrito));
-      actualizarCarrito();
-    }
-
-    function actualizarCarrito() {
-      const listaCarrito = document.getElementById("lista-carrito");
-      listaCarrito.innerHTML = '';
-      let total = 0;
-      carrito.forEach(p => {
-        listaCarrito.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
-        total += parseFloat(p.precio);
-      });
-      document.getElementById("total").textContent = total.toFixed(2);
-    }
-
-    function eliminarProducto(index) {
-      // Implementar eliminación de producto en Firebase si es necesario
-      productos.splice(index, 1);
-      actualizarVista();
-    }
-
-    function editarProducto(index, campo, valor) {
-      productos[index][campo] = valor;
-      guardarProductoEnFirebase(productos[index]);
-    }
-
-    function editarImagen(index, input) {
-      const file = input.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onloadend = () => {
-          productos[index].imagen = reader.result;
-          guardarProductoEnFirebase(productos[index]);
-        };
-        reader.readAsDataURL(file);
-      }
-    }
-
-    function comprar() {
-      if (carrito.length) {
-        alert("¡Gracias por tu compra!");
-        carrito = [];
-        localStorage.setItem("carrito", JSON.stringify(carrito));
-        actualizarCarrito();
-      } else {
-        alert("Tu carrito está vacío.");
-      }
-    }
-
-    function filtrarCategoria() {
-      categoriaSeleccionada = selectorCategoria.value;
-      actualizarVista();
-    }
-
-    function cambiarLogo() {
-      const input = document.getElementById("logoInput").files[0];
-      if (input) {
-        const reader = new FileReader();
-        reader.onloadend = function () {
-          document.getElementById("company-logo").src = reader.result;
-          localStorage.setItem("logoEmpresa", reader.result);
-        };
-        reader.readAsDataURL(input);
-      }
-    }
-
-    function cargarLogoGuardado() {
-      const logo = localStorage.getItem("logoEmpresa");
-      if (logo) document.getElementById("company-logo").src = logo;
-    }
-
-    cargarProductosDesdeFirebase();
-    actualizarCarrito();
-    cargarLogoGuardado();
-  </script>
-</body>
-</html>
+            <button class="producto-boton"12
