--- a/index.html
+++ b/index.html
@@ -5,8 +5,222 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    /* ... (tu CSS original sin cambios) ... */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+
+    header {
+      background-color: #66e0d4;
+      padding: 1em;
+      text-align: center;
+      color: white;
+    }
+
+    #company-logo {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    #filtro-categoria {
+      margin: 20px auto 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    #productos-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 12px;
+      padding: 20px;
+      justify-items: center;
+    }
+
+    .producto-tarjeta {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 12px;
+      width: 150px;
+      text-align: center;
+      background-color: white;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      position: relative;
+    }
+
+    .producto-imagen {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+
+    .producto-nombre {
+      font-size: 14px;
+      margin: 6px 0;
+      color: #333;
+    }
+
+    .producto-precio {
+      font-size: 13px;
+      color: #666;
+    }
+
+    .producto-categoria {
+      font-size: 12px;
+      color: #999;
+    }
+
+    .producto-boton {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background-color: #007acc;
+      border: none;
+      border-radius: 50%;
+      color: white;
+      width: 30px;
+      height: 30px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    #carrito {
+      padding: 20px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+    }
+
+    #botonAdmin {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 24px;
+      background: #007acc;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 400px;
+      position: relative;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      cursor: pointer;
+    }
+
+    .admin-button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+      background-color: #66e0d4;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .input-edit {
+      width: 100%;
+      margin: 5px 0;
+    }
+
+    @media screen and (min-width: 600px) {
+      #productos-container {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      }
+    }
   </style>
+
+  <!-- Firebase SDKs -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCpHYnWuWp7sb9P-HR6rEMg7fg9Xigl-lA",
+      authDomain: "sorpresasinstyle-2664b.firebaseapp.com",
+      databaseURL: "https://sorpresasinstyle-2664b-default-rtdb.firebaseio.com",
+      projectId: "sorpresasinstyle-2664b",
+      storageBucket: "sorpresasinstyle-2664b.firebasestorage.app",
+      messagingSenderId: "615713402015",
+      appId: "1:615713402015:web:74bcd71e0a22f3815c06aa",
+      measurementId: "G-82WQ2NKVLQ"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
+    const analytics = getAnalytics(app);
+
+    // Función para obtener los productos desde Firebase
+    function obtenerProductos() {
+      const dbRef = ref(database, 'productos/');
+      get(dbRef).then((snapshot) => {
+        if (snapshot.exists()) {
+          const productosData = snapshot.val();
+          productos = Object.values(productosData);
+          actualizarVista();
+        } else {
+          console.log("No se encontraron productos.");
+        }
+      }).catch((error) => {
+        console.error("Error al obtener los productos:", error);
+      });
+    }
+
+    // Función para guardar los productos en Firebase
+    function guardarProductos() {
+      const dbRef = ref(database, 'productos/');
+      set(dbRef, productos)
+        .then(() => {
+          console.log("Productos guardados en Firebase.");
+        })
+        .catch((error) => {
+          console.error("Error al guardar productos:", error);
+        });
+    }
+
+    // Llama a obtener los productos al cargar la página
+    obtenerProductos();
+  </script>
+
 </head>
 <body>
   <header>
@@ -54,24 +268,7 @@
 
   <button id="botonAdmin">⚙️</button>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
-    import { getDatabase, ref, set, onValue, push, update, remove } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCpHYnWuWp7sb9P-HR6rEMg7fg9Xigl-lA",
-      authDomain: "sorpresasinstyle-2664b.firebaseapp.com",
-      databaseURL: "https://sorpresasinstyle-2664b.firebaseio.com",
-      projectId: "sorpresasinstyle-2664b",
-      storageBucket: "sorpresasinstyle-2664b.appspot.com",
-      messagingSenderId: "615713402015",
-      appId: "1:615713402015:web:8c435f17d757aa225c06aa",
-      measurementId: "G-022Q2CW6W0"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-
+  <script>
     const modal = document.getElementById("adminModal");
     const botonAdmin = document.getElementById("botonAdmin");
     const span = document.getElementsByClassName("close")[0];
@@ -79,7 +276,7 @@
     const productosAgregados = document.getElementById("productos-agregados");
     const selectorCategoria = document.getElementById("selector-categoria");
 
-    let productos = [];
+    let productos = []; // Este es ahora el array sincronizado con Firebase
     let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
     let categoriaSeleccionada = "todas";
 
@@ -100,29 +297,15 @@
           const nuevoProducto = {
             nombre, precio, categoria, imagen: reader.result
           };
-          guardarProductoEnFirebase(nuevoProducto);
+          productos.push(nuevoProducto);
+          guardarProductos();  // Sincroniza con Firebase
+          actualizarVista();
         };
         reader.readAsDataURL(imagen);
       }
 
       this.reset();
     });
-
-    function guardarProductoEnFirebase(producto) {
-      const newProductRef = push(ref(database, 'productos'));
-      set(newProductRef, producto);
-    }
-
-    function cargarProductosDesdeFirebase() {
-      const productosRef = ref(database, 'productos');
-      onValue(productosRef, (snapshot) => {
-        productos = [];
-        snapshot.forEach((childSnapshot) => {
-          productos.push({ id: childSnapshot.key, ...childSnapshot.val() });
-        });
-        actualizarVista();
-      });
-    }
 
     function actualizarVista() {
       productosContainer.innerHTML = '';
@@ -133,19 +316,115 @@
         ? productos
         : productos.filter(p => p.categoria === categoriaSeleccionada);
 
-      productosFiltrados.forEach((producto) => {
+      productosFiltrados.forEach((producto, index) => {
         const tarjeta = `
           <div class="producto-tarjeta">
             <img src="${producto.imagen}" class="producto-imagen">
             <div class="producto-nombre">${producto.nombre}</div>
             <div class="producto-precio">$${producto.precio}</div>
             <div class="producto-categoria">${producto.categoria}</div>
-            <button class="producto-boton" onclick="agregarAlCarrito('${producto.id}')">🛒</button>
+            <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
           </div>`;
         productosContainer.innerHTML += tarjeta;
       });
 
-      productos.forEach((producto) => {
+      productos.forEach((producto, index) => {
         productosAgregados.innerHTML += `
           <div class="producto-tarjeta">
-            <7
+            <img src="${producto.imagen}" class="producto-imagen">
+            <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
+            <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
+            <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
+            <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
+            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
+          </div>`;
+      });
+    }
+
+    function actualizarSelectorCategorias() {
+      const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
+      selectorCategoria.innerHTML = categorias.map(cat => 
+        `<option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>`).join('');
+    }
+
+    function agregarAlCarrito(index) {
+      carrito.push(productos[index]);
+      localStorage.setItem("carrito", JSON.stringify(carrito));
+      actualizarCarrito();
+    }
+
+    function actualizarCarrito() {
+      const listaCarrito = document.getElementById("lista-carrito");
+      listaCarrito.innerHTML = '';
+      let total = 0;
+      carrito.forEach(p => {
+        listaCarrito.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
+        total += parseFloat(p.precio);
+      });
+      document.getElementById("total").textContent = total.toFixed(2);
+    }
+
+    function eliminarProducto(index) {
+      productos.splice(index, 1);
+      guardarProductos();  // Sincroniza con Firebase
+      actualizarVista();
+    }
+
+    function editarProducto(index, campo, valor) {
+      productos[index][campo] = valor;
+      guardarProductos();  // Sincroniza con Firebase
+      actualizarVista();
+    }
+
+    function editarImagen(index, input) {
+      const file = input.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onloadend = () => {
+          productos[index].imagen = reader.result;
+          guardarProductos();  // Sincroniza con Firebase
+          actualizarVista();
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+
+    function comprar() {
+      if (carrito.length) {
+        alert("¡Gracias por tu compra!");
+        carrito = [];
+        localStorage.setItem("carrito", JSON.stringify(carrito));
+        actualizarCarrito();
+      } else {
+        alert("Tu carrito está vacío.");
+      }
+    }
+
+    function filtrarCategoria() {
+      categoriaSeleccionada = selectorCategoria.value;
+      actualizarVista();
+    }
+
+    function cambiarLogo() {
+      const input = document.getElementById("logoInput").files[0];
+      if (input) {
+        const reader = new FileReader();
+        reader.onloadend = function () {
+          document.getElementById("company-logo").src = reader.result;
+          localStorage.setItem("logoEmpresa", reader.result);
+        };
+        reader.readAsDataURL(input);
+      }
+    }
+
+    function cargarLogoGuardado() {
+      const logo = localStorage.getItem("logoEmpresa");
+      if (logo) document.getElementById("company-logo").src = logo;
+    }
+
+    actualizarVista();
+    actualizarCarrito();
+    cargarLogoGuardado();
+  </script>
+</body>
+</html>
